--- a/backend/themes/default/templates/campaigns.html
+++ b/backend/themes/default/templates/campaigns.html
@@ -35,36 +35,69 @@
                                             <v-container>
                                                 <v-row dense>
                                                     <v-col cols="12" md="6">
-                                                        <v-text-field label="Name" v-model="form.name" outlined dense/>
+                                                        <v-text-field label="Name" v-model="form.name" outlined
+                                                                      dense></v-text-field>
                                                     </v-col>
                                                     <v-col cols="12" md="6">
                                                         <v-text-field label="Alias" v-model="form.alias" outlined
-                                                                      dense/>
+                                                                      dense></v-text-field>
                                                     </v-col>
                                                     <v-col cols="12" md="6">
                                                         <v-select label="Status" v-model="form.status" :items="statuses"
                                                                   outlined
-                                                                  dense/>
+                                                                  dense></v-select>
                                                     </v-col>
                                                     <v-col cols="12" md="6">
                                                         <v-select label="Type" v-model="form.type" :items="types"
                                                                   outlined
-                                                                  dense/>
+                                                                  dense></v-select>
                                                     </v-col>
                                                     <v-col cols="12" md="6">
                                                         <v-select label="Redirect Mode" v-model="form.redirect_mode"
-                                                                  :items="redirectModes" outlined dense/>
+                                                                  :items="redirectModes" outlined dense></v-select>
                                                     </v-col>
                                                     <v-col cols="12" md="6">
-                                                        <v-select label="Domain" v-model="form.domain_id"
-                                                                  :items="domains"
-                                                                  item-text="name" item-value="id" outlined dense/>
+                                                        <v-col cols="12">
+                                                            <v-select
+                                                                    v-model="flowForm.landing"
+                                                                    :items="domains"
+                                                                    item-text="domain"
+                                                                    item-value="id"
+                                                                    label="Domain"
+                                                                    outlined
+                                                                    dense></v-select>
+                                                        </v-col>
                                                     </v-col>
                                                     <v-col cols="12" md="6">
                                                         <v-select label="Group" v-model="form.group_id" :items="groups"
                                                                   item-text="name"
-                                                                  item-value="id" outlined dense/>
+                                                                  item-value="id" outlined dense></v-select>
                                                     </v-col>
+                                                    <v-col cols="12" md="6">
+                                                        <v-select
+                                                                label="Bind Visitors"
+                                                                v-model="form.bind_method"
+                                                                :items="[
+                                                                    { text: 'None', value: 'none' },
+                                                                    { text: 'Flows', value: 'flow' },
+                                                                    { text: 'Flows + LP', value: 'flow_lander' },
+                                                                    { text: 'Flows + LP + Offer', value: 'flow_lander_offer' }
+                                                                ]"
+                                                                outlined
+                                                                dense
+                                                        ></v-select>
+                                                    </v-col>
+
+                                                    <v-col cols="12" md="6">
+                                                        <v-text-field
+                                                                label="Bind TTL (hours)"
+                                                                v-model="form.bind_ttl_hours"
+                                                                type="number"
+                                                                outlined
+                                                                dense
+                                                        ></v-text-field>
+                                                    </v-col>
+
                                                 </v-row>
                                             </v-container>
                                         </v-card>
@@ -75,32 +108,43 @@
                                         <v-card flat>
                                             <v-container>
                                                 <v-row dense>
+                                                    <v-col cols="12" md="12">
+                                                        <v-text-field
+                                                                label="Campaign URL"
+                                                                :value="campaignUrl"
+                                                                readonly
+                                                                outlined
+                                                                dense
+                                                                append-icon="mdi-content-copy"
+                                                                @click:append="copyCampaignUrl"></v-text-field>
+                                                    </v-col>
+
                                                     <v-col cols="12" md="6">
                                                         <v-select label="Traffic Source"
                                                                   v-model="form.traffic_source_id"
                                                                   :items="sources" item-text="name" item-value="id"
                                                                   outlined
-                                                                  dense/>
+                                                                  dense></v-select>
                                                     </v-col>
                                                     <v-col cols="12" md="6">
                                                         <v-select label="Cost Model" v-model="form.cost_model"
                                                                   :items="costModels"
-                                                                  outlined dense/>
+                                                                  outlined dense></v-select>
                                                     </v-col>
                                                     <v-col cols="12" md="6">
                                                         <v-text-field label="Traffic Loss (%)"
                                                                       v-model="form.traffic_loss_percent"
-                                                                      type="number" outlined dense/>
+                                                                      type="number" outlined dense></v-text-field>
                                                     </v-col>
                                                     <v-col cols="12" md="6">
                                                         <v-select label="Uniqueness Method"
                                                                   v-model="form.uniqueness_method"
-                                                                  :items="uniquenessMethods" outlined dense/>
+                                                                  :items="uniquenessMethods" outlined dense></v-select>
                                                     </v-col>
                                                     <v-col cols="12" md="6">
                                                         <v-text-field label="Uniqueness TTL (hrs)"
                                                                       v-model="form.uniqueness_ttl"
-                                                                      type="number" outlined dense/>
+                                                                      type="number" outlined dense></v-text-field>
                                                     </v-col>
                                                 </v-row>
                                             </v-container>
@@ -514,10 +558,21 @@
                 this.landings.forEach(l => (map[l.id] = l.name));
                 return map;
             },
+            domainsMap() {
+                const map = {};
+                this.domains.forEach(l => (map[l.id] = l.name));
+                return map;
+            },
             offerMap() {
                 const map = {};
                 this.offers.forEach(o => (map[o.id] = o.name));
                 return map;
+            },
+
+            campaignUrl() {
+                if (!this.form.domain_id || !this.form.alias) return '';
+                const domain = this.domains.find(d => d.id === this.form.domain_id);
+                return domain ? `https://${domain.name}/${this.form.alias}` : '';
             }
         },
         mounted() {
@@ -525,6 +580,17 @@
             this.$root.$on('load-campaigns', this.loadCampaigns);
         },
         methods: {
+            copyCampaignUrl() {
+                const text = this.campaignUrl;
+                if (!text) return;
+
+                navigator.clipboard.writeText(text).then(() => {
+                    this.$root.$emit('show-message', {
+                        type: 'success',
+                        text: 'Campaign URL copied!'
+                    });
+                });
+            },
             loadLandings() {
                 fetch('/landings', {credentials: 'include'})
                     .then(res => res.json())
@@ -644,6 +710,7 @@
             openCreate() {
                 this.preloadData();
                 this.dialog = true;
+                this.form.alias = this.generateAlias()
             },
             openEdit(item) {
                 this.preloadData();
@@ -700,6 +767,14 @@
                             text: `Failed to delete campaign: ${err.message}`
                         });
                     });
+            },
+            generateAlias(length = 8) {
+                const chars = 'abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789';
+                let result = '';
+                for (let i = 0; i < length; i++) {
+                    result += chars.charAt(Math.floor(Math.random() * chars.length));
+                }
+                return result;
             }
 
 
